--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.1.0",
   "description": "A node-html-parser based sitemap generator",
   "main": "dist/index.js",
+  "type": "module",
   "bin": {
     "generate-sitemap": "./cli.js"
   },
@@ -18,13 +19,7 @@
     "type": "git",
     "url": "git+https://github.com/Utility-Gods/node-sitemap-cli.git"
   },
-  "keywords": [
-    "sitemap-generator",
-    "sitemap",
-    "seo",
-    "crawler",
-    "node"
-  ],
+  "keywords": ["sitemap-generator", "sitemap", "seo", "crawler", "node"],
   "author": "Siddharth (sid@utilitygods.com)",
   "license": "ISC",
   "bugs": {
